# list-features

./: .gitlab-ci.yml  Cargo.toml  changelog.md  license.txt  readme.md  reame.md
.github/workflows/: dummy.yml  test.yml
.zed/: settings.json
example_crate/: Cargo.toml  build.rs
example_crate/src/: main.rs
src/: lib.rs
tests/: basic.rs  edge_cases.rs  enabled_features.rs
