[package]
name = "list-features"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"

authors = ["David Dernoncourt"]
description = "Extracts the list of enabled feature flags during compilation."
categories = ["development-tools::build-utils"]
keywords = ["features"]
readme = "readme.md"
repository = "https://framagit.org/dder/list-features"

[features]
test = []
